# Gabinete_sensores

./: .gitignore  README.md
CircuitDesing/Sensores/: Con_digital.kicad_sch  Esp32Schematic.kicad_sch  Esp32Schematic.kicad_sch-bak  Potencia.kicad_sch  Sensores.kicad_sch  embebidos.csv  embebidos.kicad_pcb  embebidos.kicad_prl  embebidos.kicad_pro  embebidos.kicad_sch  embebidos.kicad_sch-bak  embebidos.xml  fp-info-cache  report.txt
CircuitDesing/embebidos/: Actuadores.kicad_sch  Buck-converter_sch.kicad_sch  Esp32Schematic.kicad_sch  Potencia.kicad_sch  Sensores.kicad_sch  embebidos.kicad_prl  embebidos.kicad_pro  embebidos.kicad_sch  untitled.kicad_sch
Prueba perifericos/dht11/: CMakeLists.txt  sdkconfig
Prueba perifericos/dht11/main/: main.c
Prueba perifericos/ds3132n/: CMakeLists.txt  sdkconfig
Prueba perifericos/ds3132n/main/: Kconfig.projbuild  main.c
Prueba perifericos/hc-sr04/: CMakeLists.txt  sdkconfig
Prueba perifericos/hc-sr04/main/: main.c
Prueba perifericos/lm393/: CMakeLists.txt
Prueba perifericos/lm393/main/: CMakeLists.txt  main.c
Prueba perifericos/lm393/main/modulos/: soil_humidity.c  soil_humidity.h
coding/intento5/: CMakeLists.txt  sdkconfig
coding/intento5/main/: CMakeLists.txt  main.h
coding/intento5/main/actuadores/: vent.c
coding/intento5/main/communication/: communication.h
coding/intento5/main/hmi/: Display.h  ssd1306_i2c.c
coding/intento5/main/modulos/: soil_humidity.c  soil_humidity.h
coding/sample_project/: sdkconfig
coding/sample_project/main/: CMakeLists.txt  main.c
(+14 files in other folders)
